--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,13 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.Segment {
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+.Margen {
+  margin-top: 15px;
+}
+
